--- a/MyJira/MyJira/Views/Shared/_Layout.cshtml
+++ b/MyJira/MyJira/Views/Shared/_Layout.cshtml
@@ -17,13 +17,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("MyJira", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     @if (User.IsInRole("Administrator")){
-                        <li>@Html.ActionLink("List of Devs", "Index", "User")</li>
-                        <li>@Html.ActionLink("List of Teams", "Index", "Team")</li>
+                        <li>@Html.ActionLink("Devs", "Index", "User")</li>
+                        <li>@Html.ActionLink("Teams", "Index", "Team")</li>
                     }
                 </ul>
                 @Html.Partial("_LoginPartial")
