added project controller and project views

--- a/MyJira/MyJira/Views/Shared/_Layout.cshtml
+++ b/MyJira/MyJira/Views/Shared/_Layout.cshtml
@@ -25,6 +25,8 @@
                         <li>@Html.ActionLink("Devs", "Index", "User")</li>
                         <li>@Html.ActionLink("Teams", "Index", "Team")</li>
                     }
+                    
+                    <li>@Html.ActionLink("Projects", "Index", "Project")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
