--- a/MyJira/MyJira/Views/Team/Index.cshtml
+++ b/MyJira/MyJira/Views/Team/Index.cshtml
@@ -20,6 +20,7 @@
                 <button class="btn btn-success" type="submit">Delete Team</button>
             }
             <a class="btn btn-sm btn-success" href="/Team/Edit/@team.TeamId">Edit Team</a>
+            <a class="btn btn-sm btn-success" href="/Team/Show/@team.TeamId">View more</a>
         </div>
     </div>
 }
