--- a/MyJira/MyJira/Views/User/Index.cshtml
+++ b/MyJira/MyJira/Views/User/Index.cshtml
@@ -29,9 +29,9 @@
         @using (Html.BeginForm(actionName: "Delete", controllerName: "User", method: FormMethod.Post, routeValues: new { id = user.Id}))
         {
             @Html.HttpMethodOverride(HttpVerbs.Delete)
-            <button class="btn btn-success" type="submit">Delete Team</button>
+            <button class="btn btn-success" type="submit">Delete</button>
         }
-        <a class="btn btn-sm btn-success" href="/User/Edit/@user.Id">Edit Dev</a>
+        <a class="btn btn-success" href="/User/Edit/@user.Id">Edit</a>
     </div>
     <br />
     <br />
