added crud on task

--- a/MyJira/MyJira/Views/Project/Index.cshtml
+++ b/MyJira/MyJira/Views/Project/Index.cshtml
@@ -13,7 +13,7 @@
         <div class="panel-heading">@project.Name</div>
 
         <div class="panel-body">
-            Project description: <strong>@project.Description</strong>
+            <strong>Project description:</strong> @project.Description
             <br/>
             <i class="glyphicon glyphicon-user"> </i><i> created by </i><strong> @project.User.UserName </strong>
         </div>
