--- a/MyJira/MyJira/Views/Project/New.cshtml
+++ b/MyJira/MyJira/Views/Project/New.cshtml
@@ -25,5 +25,5 @@
     @Html.HiddenFor(m => m.UserId);
     <br />
 
-    <button class="btn btn-sm btn-success" type="submit">Add Project</button>
+    <button class="btn btn-sm btn-success" type="submit">Create</button>
 }
