--- a/MyJira/MyJira/Views/Shared/_Layout.cshtml
+++ b/MyJira/MyJira/Views/Shared/_Layout.cshtml
@@ -21,12 +21,14 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    @if (User.IsInRole("Administrator")){
+                    @if (User.IsInRole("Administrator"))
+                    {
                         <li>@Html.ActionLink("Devs", "Index", "User")</li>
                         <li>@Html.ActionLink("Teams", "Index", "Team")</li>
                     }
-                    
+
                     <li>@Html.ActionLink("Projects", "Index", "Project")</li>
+                    <li>@Html.ActionLink("Tasks", "Index", "Task")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
