--- a/MyJira/MyJira/Views/Team/Index.cshtml
+++ b/MyJira/MyJira/Views/Team/Index.cshtml
@@ -12,17 +12,13 @@
 {
     <div class="panel panel-default">
         <div class="panel-heading">@team.TeamName</div>
-        <div class="panel-body">
-            @using (Html.BeginForm(actionName: "Delete", controllerName: "Team", method: FormMethod.Post, routeValues: new { id = team.TeamId }))
-            {
-                @Html.HttpMethodOverride(HttpVerbs.Delete)
-                <br />
-                <button class="btn btn-success" type="submit">Delete Team</button>
-            }
-            <a class="btn btn-sm btn-success" href="/Team/Edit/@team.TeamId">Edit Team</a>
+        
+        <div class="panel-footer">
             <a class="btn btn-sm btn-success" href="/Team/Show/@team.TeamId">View more</a>
         </div>
     </div>
+
+    <br />
 }
 
 <br />
