linked task to project, changed some features for views

--- a/MyJira/MyJira/Views/Project/Show.cshtml
+++ b/MyJira/MyJira/Views/Project/Show.cshtml
@@ -4,23 +4,26 @@
     ViewBag.Title = "Show";
 }
 
-<h1>@ViewBag.Title</h1>
+<h3>@ViewBag.Title</h3>
 
 <div class="panel panel-default">
     <div class="panel-heading">@Model.Name</div>
 
     <div class="panel-body">
         Project description: <strong>@Model.Description</strong>
-        <br/>
+        <br />
         <i class="glyphicon glyphicon-user"> </i><i> created by </i><strong> @Model.User.UserName </strong>
+
+        <br />
+        <a class="btn btn-outline-info" href="/Task/New/@Model.Id">Create Task</a>
     </div>
 
     <div class="panel-footer">
-        <a class="btn btn-success" href="/Project/Edit/@Model.Id">Edit</a>
-        @using (Html.BeginForm(actionName: "Delete", controllerName: "Project", method: FormMethod.Post, routeValues: new { id = @Model.Id }, htmlAttributes: new {style = "display: inline"}))
+        <a class="btn btn-sm btn-success" href="/Project/Edit/@Model.Id">Edit</a>
+        @using (Html.BeginForm(actionName: "Delete", controllerName: "Project", method: FormMethod.Post, routeValues: new { id = @Model.Id }, htmlAttributes: new { style = "display: inline" }))
         {
             @Html.HttpMethodOverride(HttpVerbs.Delete)
-            <button class="btn btn-success" type="submit">Delete</button>
+            <button class="btn btn-sm btn-success" type="submit">Delete</button>
         }
     </div>
 </div>
