--- a/MyJira/MyJira/Views/Team/New.cshtml
+++ b/MyJira/MyJira/Views/Team/New.cshtml
@@ -17,5 +17,5 @@
     <br />
     <br />
 
-<button class="btn btn-sm btn-success" type="submit">Add Team</button>
+<button class="btn btn-sm btn-success" type="submit">Create</button>
 }
