--- a/MyJira/MyJira/Views/Project/Index.cshtml
+++ b/MyJira/MyJira/Views/Project/Index.cshtml
@@ -5,7 +5,10 @@
 <h2>@ViewBag.Title</h2>
 <hr />
 
-<h3>@ViewBag.message</h3>
+@if (TempData.ContainsKey("message"))
+{
+    <h3 class="alert alert-info" role="alert">@ViewBag.message</h3>
+}
 
 @foreach (MyJira.Models.Project project in ViewBag.Projects)
 {
@@ -14,7 +17,7 @@
 
         <div class="panel-body">
             <strong>Project description:</strong> @project.Description
-            <br/>
+            <br />
             <i class="glyphicon glyphicon-user"> </i><i> created by </i><strong> @project.User.UserName </strong>
         </div>
 
@@ -23,7 +26,7 @@
         </div>
     </div>
 
-    <br/>
+    <br />
 }
 
 <br />
