--- a/MyJira/MyJira/Views/Task/Edit.cshtml
+++ b/MyJira/MyJira/Views/Task/Edit.cshtml
@@ -7,12 +7,16 @@
 <h2>@ViewBag.Title2</h2>
 
 @using (Html.BeginForm(actionName: "Edit", controllerName: "Task"))
-{ 
+{
     @Html.HttpMethodOverride(HttpVerbs.Put)
     @Html.ValidationSummary(false, "", new { @class = "text-danger" })
 
     @Html.HiddenFor(m => m.Id)
     @Html.HiddenFor(m => m.ReporterId)
+   
+    <br />
+    @Html.HiddenFor(m => m.ProjectId)
+    @:<p><strong>Project name: </strong> <span class="label label-default">@Model.Project.Name</span></p>
 
     @Html.Label("Title", "Title")
     <br />
@@ -28,13 +32,13 @@
     <br />
     <br />
 
-    <label>Status</label>
+    <i class="glyphicon glyphicon-th-list"></i> <label>Status</label>
     @Html.DropDownListFor(m => m.Status, new SelectList(ViewBag.allStatuses, "Value", "Text"), null, new { @class = "form-control" })
     <br />
 
     @Html.HiddenFor(m => m.StartTime)
 
-    <label>Assignee</label>
+    <i class="glyphicon glyphicon-th-list"></i> <label>Assignee</label>
     @Html.DropDownListFor(m => m.AssigneeId, new SelectList(ViewBag.allDevs, "Value", "Text"), "None", new { @class = "form-control" })
     <br />
 
