--- a/MyJira/MyJira/Views/User/Index.cshtml
+++ b/MyJira/MyJira/Views/User/Index.cshtml
@@ -17,6 +17,9 @@
         <div class="panel-heading"><strong>Dev's Name:</strong> @user.UserName</div>
 
         <div class="panel-body">
+            <figure>
+                <img src="~/Photos/@user.PhotoPath" alt="Photo unavailable" height="50" width="50"/>
+            </figure>
             <i class="glyphicon glyphicon-envelope"></i> Dev's Email: <span class="label label-default">@user.Email</span>
             <br />
             <i class="glyphicon glyphicon-home"></i> Dev's Team: <span class="label label-default">@user.Team.TeamName</span>
