refactored the design

--- a/MyJira/MyJira/Views/Project/Index.cshtml
+++ b/MyJira/MyJira/Views/Project/Index.cshtml
@@ -18,7 +18,7 @@
         <div class="panel-body">
             <strong>Project description:</strong> @project.Description
             <br />
-            <i class="glyphicon glyphicon-user"> </i><i> created by </i><strong> @project.User.UserName </strong>
+            @*@<i class="glyphicon glyphicon-user"> </i><i> created by </i><strong> @project.Leader.UserName </strong>*@
         </div>
 
         <div class="panel-footer">
