--- a/MyJira/MyJira/Views/Task/Show.cshtml
+++ b/MyJira/MyJira/Views/Task/Show.cshtml
@@ -7,7 +7,7 @@
 <h1>@ViewBag.Title2</h1>
 
 <div class="panel panel-default">
-    <div class="panel-heading"> <span class="label label-default">@Model.Project.Name</span> | @Model.Title</div>
+    <div class="panel-heading"> <span class="label label-default">@Model.Reporter.Team.Project.Name</span> | @Model.Title</div>
     
     <div class="panel panel-body">
         <p><strong>Description:</strong> @Model.Description</p>
