--- a/MyJira/MyJira/Views/Team/Edit.cshtml
+++ b/MyJira/MyJira/Views/Team/Edit.cshtml
@@ -11,12 +11,12 @@
     @Html.HttpMethodOverride(HttpVerbs.Put)
     @Html.ValidationSummary(false, "", new { @class = "text-danger" })
 
-    @Html.HiddenFor(m => m.TeamId)
+    @Html.HiddenFor(m => m.Id)
     <br />
-    @Html.Label("TeamName", "Team Name")
+    @Html.Label("Name", "Team Name")
     <br />
-    @Html.EditorFor(m => m.TeamName)
-    @Html.ValidationMessageFor(m => m.TeamName, null, new { @class = "text-danger" })
+    @Html.EditorFor(m => m.Name)
+    @Html.ValidationMessageFor(m => m.Name, null, new { @class = "text-danger" })
     <br /> <br />
 
     <button class="btn btn-sm btn-success" type="submit">Submit changes</button>
