--- a/MyJira/MyJira/Views/User/Index.cshtml
+++ b/MyJira/MyJira/Views/User/Index.cshtml
@@ -22,7 +22,7 @@
             </figure>
             <i class="glyphicon glyphicon-envelope"></i> Dev's Email: <span class="label label-default">@user.Email</span>
             <br />
-            <i class="glyphicon glyphicon-home"></i> Dev's Team: <span class="label label-default">@user.Team.TeamName</span>
+            <i class="glyphicon glyphicon-home"></i> Dev's Team: <span class="label label-default">@user.Team.Name</span>
             <br />
             @if (user.PhoneNumber != null)
             {
