--- a/MyJira/MyJira/Views/Project/Index.cshtml
+++ b/MyJira/MyJira/Views/Project/Index.cshtml
@@ -18,17 +18,16 @@
         <div class="panel-body">
             <strong>Project description:</strong> @project.Description
             <br />
-            @*@<i class="glyphicon glyphicon-user"> </i><i> created by </i><strong> @project.Leader.UserName </strong>*@
+            <i class="glyphicon glyphicon-user"> </i><i> created by </i><strong> @project.Leader.UserName </strong>
         </div>
 
         <div class="panel-footer">
             <a class="btn btn-sm btn-success" href="/Project/Show/@project.Id">View more</a>
         </div>
     </div>
-
     <br />
 }
 
 <br />
-<a class="btn btn-success" href="/Project/New">Add Project</a>
+<a class="btn btn-sm btn-success" href="/Project/New">Add Project</a>
 <br />
