--- a/MyJira/MyJira/Views/Task/Index.cshtml
+++ b/MyJira/MyJira/Views/Task/Index.cshtml
@@ -14,14 +14,18 @@
 @foreach (MyJira.Models.Task task in ViewBag.tasks)
 {
     <div class="panel panel-default">
-        <div class="panel-heading"> <span class="label label-default">@task.Reporter.Team.Project.Name</span> | @task.Title</div>
+        <div class="panel-heading"> 
+            @if (task.Reporter.Team != null)
+            {
+                <span class="label label-default">
+                    @task.Reporter.Team.Project.Name
+                </span>
+            }
+            | @task.Title</div>
         
         <div class="panel-body">
-            <strong>Continut articol:</strong> @task.Description
+            <strong>Task description:</strong> @task.Description
             <br />
-            <strong>Status:</strong> @task.Status
-            <br />
-            <i class="glyphicon glyphicon-user"> </i><i> reported by </i><strong> @task.Reporter.UserName </strong>
         </div>
 
         <div class="panel-footer">
