--- a/MyJira/MyJira/Views/User/Index.cshtml
+++ b/MyJira/MyJira/Views/User/Index.cshtml
@@ -22,7 +22,17 @@
             </figure>
             <i class="glyphicon glyphicon-envelope"></i> Dev's Email: <span class="label label-default">@user.Email</span>
             <br />
-            <i class="glyphicon glyphicon-home"></i> Dev's Team: <span class="label label-default">@user.Team.Name</span>
+            <i class="glyphicon glyphicon-home"></i>
+            Dev's Team:
+            @if (user.TeamId != null)
+            {
+                 <span class="label label-default">@user.Team.Name</span>
+            }
+            else
+            {
+                <span>*no team assigned*</span>
+            }
+
             <br />
             @if (user.PhoneNumber != null)
             {
