--- a/MyJira/MyJira/Views/Team/Show.cshtml
+++ b/MyJira/MyJira/Views/Team/Show.cshtml
@@ -54,7 +54,7 @@
                     }
                 </div>
             </div>
-            <a class="btn btn-outline-info" href="/Task/New/">Create Task</a>
+            <a class="btn btn-outline-info" href="/Task/New/@Model.Id">Create Task</a>
         }
     </div>
 
