--- a/MyJira/MyJira/Views/Task/Show.cshtml
+++ b/MyJira/MyJira/Views/Task/Show.cshtml
@@ -6,9 +6,15 @@
 
 <h1>@ViewBag.Title2</h1>
 
+@if (ViewBag.message != null)
+{
+    <h3 class="alert alert-info" role="alert">@ViewBag.message</h3>
+}
+
+
 <div class="panel panel-default">
-    <div class="panel-heading"> <span class="label label-default">@Model.Reporter.Team.Project.Name</span> | @Model.Title</div>
-    
+    <div class="panel-heading"> <span class="label label-default">@ViewBag.project.Name</span> | @Model.Title</div>
+
     <div class="panel panel-body">
         <p><strong>Description:</strong> @Model.Description</p>
         <p><strong>Status:</strong> @Model.Status</p>
@@ -48,14 +54,14 @@
             </div>
         }
 
-    <form method="post" action="/Task/AddComment/">
-        <textarea class="summernote" name="Content" ></textarea>
-        <br />
-        <input type="hidden" name="Date" value="@DateTime.Now" />
-        <input type="hidden" name="UserId" value="@ViewBag.CurrentUser"/>
-        <input type="hidden" name="TaskId" value="@Model.Id" />
-        <button class="btn btn-sm btn-success" type="submit">Add Comment</button>
-    </form>
+        <form method="post" action="/Task/AddComment/">
+            <textarea class="summernote" name="Content"></textarea>
+            <br />
+            <input type="hidden" name="Date" value="@DateTime.Now" />
+            <input type="hidden" name="UserId" value="@ViewBag.CurrentUser" />
+            <input type="hidden" name="TaskId" value="@Model.Id" />
+            <button class="btn btn-sm btn-success" type="submit">Add Comment</button>
+        </form>
 
 
     </div>
